--- a/doraemonJSminiGamePortfolio/desktop.css
+++ b/doraemonJSminiGamePortfolio/desktop.css
@@ -1,23 +1,33 @@
-.no-mobile{
+.no-mobile {
   display: none;
 }
 
-html, body{
+html,
+body {
   margin: 0;
   height: 100vh;
 }
 
-body{
-  background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
+body {
+  background-image: linear-gradient(
+    to right,
+    red,
+    orange,
+    yellow,
+    green,
+    blue,
+    indigo,
+    violet
+  );
   margin: 0;
   touch-action: manipulation; /* https://developer.mozilla.org/en-US/docs/Web/CSS/touch-action#manipulation */
 }
 
-.title{
+.title {
   font-size: 1.5rem;
   border: 3px solid white;
   text-align: center;
-  font-family: "Press Start 2P";
+  font-family: 'Press Start 2P';
   color: white;
   border-radius: 1rem;
   width: 55vw;
@@ -28,18 +38,18 @@ body{
   background-color: black;
 }
 
-.canvasContainer{
+.canvasContainer {
   display: block;
   margin: 0;
   height: 400px;
 }
 
-#canvas{
+#canvas {
   display: block;
   margin: 0 auto;
 }
 
-.scoreContainer{
+.scoreContainer {
   border: 3px solid white;
   box-shadow: 10px 15px 10px black;
   width: 20rem;
@@ -53,17 +63,18 @@ body{
   border-radius: 1rem;
 }
 
-.scoreGoalContainer{
+.scoreGoalContainer {
   padding-right: 3rem;
-  left:0;
+  left: 0;
 }
 
-.scoreEarnedContainer{
+.scoreEarnedContainer {
   padding-left: 3rem;
-  right:0;
+  right: 0;
 }
 
-.scoreGoalContainer, .scoreEarnedContainer{
+.scoreGoalContainer,
+.scoreEarnedContainer {
   display: inline-flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -72,17 +83,18 @@ body{
   margin: 0 auto;
 }
 
-
-#scoreGoalHeading, #scoreEarnedHeading{
+#scoreGoalHeading,
+#scoreEarnedHeading {
   color: white;
   font-size: 1rem;
   margin-top: 0;
   margin-bottom: 0.5rem;
   font-weight: bolder;
-  font-family: "Press Start 2P";
+  font-family: 'Press Start 2P';
 }
 
-#scoreGoal, #scoreEarned{
+#scoreGoal,
+#scoreEarned {
   border: 1.5px solid white;
   padding: 1rem;
   color: red;
@@ -92,25 +104,27 @@ body{
   background-color: black;
 }
 
-.scoreContentContainer{
+.scoreContentContainer {
   display: flex;
   border: 1.5px solid white;
   border-radius: 7%;
   margin: 1rem;
   padding: 1rem;
-} 
+}
 
-.buttonContainer{
+.buttonContainer {
   display: flex;
   justify-content: center;
   padding-bottom: 1rem;
 }
 
-#startButton:hover, #pauseButton:hover{
+#startButton:hover,
+#pauseButton:hover {
   scale: 1.1;
 }
 
-#startButton, #pauseButton{
+#startButton,
+#pauseButton {
   border: none;
   margin: 1rem;
   padding: 1rem;
@@ -120,19 +134,21 @@ body{
   font-size: 3rem;
 }
 
-#startButton{
+#startButton {
   background-color: green;
 }
 
-#pauseButton{
+#pauseButton {
   background-color: red;
 }
 
-#arrowLeftButton:hover, #arrowRightButton:hover{
+#arrowLeftButton:hover,
+#arrowRightButton:hover {
   scale: 1.1;
 }
 
-#arrowLeftButton, #arrowRightButton{
+#arrowLeftButton,
+#arrowRightButton {
   border: none;
   margin: 1rem;
   padding: 1rem;
@@ -142,7 +158,7 @@ body{
   font-size: 3rem;
 }
 
-footer{
+footer {
   text-align: center;
   padding-bottom: 5px;
   border-top: 1px solid white;
@@ -154,63 +170,4 @@ footer{
   background-color: black;
   color: white;
   font-weight: bold;
-}
-
-@media screen and (max-width: 620px), (max-height: 550px){
-  .projectContainer{
-    display: none;
-  }
-  
-  .no-mobile{
-    position: absolute;
-    z-index: 99;
-    background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
-    /* margin: 0; */
-    width: 100%;
-    height: 100%;
-    top: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: 26px;
-    line-height: 130%;
-    
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-  }
-
-  #no-mobile-title{
-    font-size: 1.5rem;
-    border: 3px solid white;
-    text-align: center;
-    font-family: "Press Start 2P";
-    color: white;
-    border-radius: 1rem;
-  
-    min-width: 70vw;
-    display: block;
-    margin: 0 auto;
-    padding: 0.5rem 1rem;
-  
-    background-color: black; 
-  }
-  
-  #no-mobile-alert{
-    color: black;
-    font-weight: bold;
-    font-size: 1.5rem;
-    border: 3px solid black;
-    text-align: center;
-    font-family: "Press Start 2P";
-    /* color: white; */
-    border-radius: 1rem;
-  
-    min-width: 70vw;
-    display: block;
-    margin: 0 auto;
-    padding: 0.5rem 1rem;
-  
-    background-color: yellow; 
-  }
 }
