--- a/style.css
+++ b/style.css
@@ -312,6 +312,10 @@ main {
   margin-bottom: 2rem;
 }
 
+p {
+  margin: 0rem 0;
+}
+
 footer {
   text-align: center;
   background-color: rgba(0, 0, 0, 0.712);
