--- a/style.css
+++ b/style.css
@@ -302,11 +302,11 @@ nav a:hover {
   width: 100%;
 }
 
-.portfolio-container > .contents .table-of-contents .contents > li > h2,
+/* .portfolio-container > .contents .table-of-contents .contents > li > h2,
 .portfolio-container .contents > div > h2,
 .table-of-contents .contents li ul li h2 {
   font-size: 1.4rem;
-}
+} */
 
 .portfolio-container .contents > div dl {
   margin-top: 1.875rem;
@@ -320,11 +320,16 @@ nav a:hover {
   position: absolute;
   top: 0;
   left: 0;
+  font-size: 1.2rem;
 }
 
-.table-of-contents .contents li ul {
+.table-of-contents .contents .html-css-portfolio-container > ul {
   /* padding-left:0.625rem; */
-  /* padding-top: 0.625rem; */
+  padding-top: 1.875rem;
+}
+
+.table-of-contents .contents .html-css-portfolio-container > ul > li + li {
+  margin-top: 1rem;
 }
 
 /* .table-of-contents .contents li ul li {
@@ -335,10 +340,20 @@ nav a:hover {
   margin-top: 0.5rem;
 } */
 
-.table-of-contents .contents li ul li h2 {
-  color: #000000;
-  /* font-size: 1.4rem; */
+.table-of-contents .contents li ul li {
+  position: relative;
 }
+
+.table-of-contents .contents li ul li h2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #000000;
+}
+
+/* .table-of-contents .contents li:not(:first-of-type) ul {
+  margin-top: 5rem;
+} */
 
 .file-individual {
   margin-bottom: 0.2rem;
@@ -383,8 +398,8 @@ nav a:hover {
 
 .portfolio-image-container {
   /* display: inline-block; */
-  /* display: flex;
-  flex-direction: row; */
+  display: flex;
+  flex-direction: row;
 }
 
 .portfolio-image-container a {
