--- a/style.css
+++ b/style.css
@@ -204,6 +204,10 @@ nav a:hover {
   font-size: 1.4rem;
 }
 
+.portfolio > dd {
+  margin-top: 1.25rem;
+}
+
 .portfolio-details {
   text-align: left;
 }
@@ -344,7 +348,7 @@ nav a:hover {
   margin-top: 1.875rem;
 }
 
-.portfolio-container .contents > div > dl .portfolio:not(:first-of-type) {
+.portfolio-container .contents div dl .portfolio:not(:first-of-type) {
   margin-top: 1.875rem;
 }
 
