.portfolio html-css 섹션 details 업데이트

--- a/style.css
+++ b/style.css
@@ -299,7 +299,7 @@ nav a:hover {
   margin-top: 1.875rem;
 }
 
-.portfolio-container > .contents > .html-css-portfolio-container ul {
+.portfolio-container > .contents > .html-css-portfolio-container > ul {
   margin-top: 1.875rem;
 }
 
