--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body
 ================= */
 
 body {
+  position: relative;
   margin: 0;
   font-family: 'Ubuntu', sans-serif;
   font-size: 1.125rem;
@@ -446,6 +447,10 @@ i .fab fa-html5 {
 .contact-container 
 ================= */
 
+.contact-container {
+  height: 100vh;
+}
+
 .contact-container .contents {
   display: flex;
   flex-direction: row;
@@ -507,17 +512,21 @@ strong {
 }
 
 main {
-  margin-bottom: 2rem;
+  /* margin-bottom: 2rem; */
+  padding-bottom: 5rem;
 }
 
 footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
   text-align: center;
   background-color: rgba(0, 0, 0, 0.712);
   padding-bottom: 5px;
   color: white;
   width: 100%;
   height: 3.5vh;
-  position: fixed;
+  /* position: fixed; */
   bottom: 0;
 }
 
